# AI-VTUBER

./: .gitattributes  .gitignore  DISABLE_STARTUP.cmd  DISCORD_ADDON_GUIDE.md  PROJECT_BLUE_BUILD_STATUS_V240_INSTALLED.md  PROJECT_BLUE_BUILD_STATUS_V250_INSTALLED.md  PROJECT_BLUE_BUILD_STATUS_V260_INSTALLED.md  PROJECT_BLUE_BUILD_STATUS_V270_INSTALLED.md  PROJECT_BLUE_BUILD_STATUS_V280_INSTALLED.md  PROJECT_BLUE_BUILD_STATUS_V290_INSTALLED.md  PROJECT_BLUE_BUILD_STATUS_V300_INSTALLED.md  PROJECT_BLUE_BUILD_STATUS_V310_INSTALLED.md  PROJECT_BLUE_BUILD_STATUS_V320_INSTALLED.md  PROJECT_BLUE_BUILD_STATUS_V330_INSTALLED.md  PROJECT_BLUE_IMPLEMENTATION_STATUS.md  PROJECT_BLUE_IMPLEMENTATION_STATUS_V120.md  PROJECT_BLUE_IMPLEMENTATION_STATUS_V160.md  PROJECT_BLUE_IMPLEMENTATION_STATUS_V170.md  PROJECT_BLUE_IMPLEMENTATION_STATUS_V180.md  PROJECT_BLUE_RELEASE_v0.8.0.json  README.md  START_BLUE.cmd  START_BLUE.ps1  START_PROJECT_BLUE_HERE.md  open_blue.ps1  open_blue_3d.cmd  run_blue.ps1
Project Blue App/: .gitignore  BLUE_AGENT_ABSORPTION_2026-07-16.md  BLUE_FULL_APP_AUDIT_2026-07-16.md  BLUE_WORK_LOG_2026-07-16_IDE_READINESS.md  BLUE_WORK_LOG_2026-07-16_PROJECT_CONSCIOUSNESS.md  BLUE_WORK_LOG_2026-07-16_UI_FOUNDATION.md  BUILD_STATUS.md  PROJECT_BLUE_V8_BUILD_STATUS_20260716.md  README.md  package-lock.json  pyproject.toml  run_blue.cmd  run_blue.ps1
Project Blue App/assets/: blue_identity.vrm
Project Blue App/desktop_pet/: background-agent-scheduler-service.cjs  background-agent-service.cjs  blue-brain-service.cjs  blue-feature-service.cjs  body.css  control-audit.cjs  (+44 more)
(+424 files in other folders)
